--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -13,9 +13,8 @@
 
           <input type="text" class="form-control" formControlName="name" placeholder="Nombre del producto">
 
-          <span class="form-text text-danger">
-            <!-- Debe de ser de 3 letras -->
-            error message
+          <span *ngIf="isValidField('name')" class="form-text text-danger">
+            {{getFieldError('name')}}
           </span>
         </div>
       </div>
@@ -25,7 +24,7 @@
         <label class="col-sm-3 col-form-label">Precio</label>
         <div class="col-sm-9">
           <input type="number" class="form-control" formControlName="price" placeholder="Precio del producto">
-          <span class="form-text text-danger">
+          <span *ngIf="isValidField('price')" class="form-text text-danger">
             El precio debe de ser 0 o mayor
           </span>
         </div>
@@ -37,7 +36,7 @@
         <div class="col-sm-9">
           <input type="number" class="form-control" formControlName="inStorage" placeholder="Existencias del producto">
 
-          <span class="form-text text-danger">
+          <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
             Las existencias deben de ser 0 o mayor
           </span>
         </div>
